# cpp-extensions

./: .gitignore  CMakeLists.txt  README.md  counting_predicates.h  equal_test.cpp  is_permutation_pred_test.cpp  is_permutation_test.cpp  main.cpp  mismatch_pred_test.cpp  test_macros.h  tuple_test_fail.cpp
include/: CMakeLists.txt
include/cpp14/: CMakeLists.txt  algorithm  main.cpp  memory  tuple  type_traits  utility
include/cpp17/: CMakeLists.txt  algorithm  cmath  cstddef  main.cpp  memory  numeric  type_traits  variant
include/ext/: CMakeLists.txt  algorithm  cstddef  main.cpp  memory  tuple  type_traits  utility
test/: CMakeLists.txt  clamp.cpp  clamp_comp.cpp  destroy.cpp  destroy_at.cpp  destroy_n.cpp  equal_pred.cpp  for_each_n.cpp  is_invocable.cpp  is_nothrow_invocable.cpp  is_nothrow_swappable.cpp  is_nothrow_swappable_with.cpp  is_swappable.cpp  is_swappable_with.cpp  make_unique_array.cpp  make_unique_single.cpp  mismatch_test.cpp  sample.cpp  sample_stable.cpp  tuple_pass.cpp  uninitialized_default_construct.cpp  uninitialized_default_construct_n.cpp  uninitialized_move.cpp  uninitialized_move_n.cpp  uninitialized_value_construct.cpp  uninitialized_value_construct_n.cpp
test/fail/: CMakeLists.txt  make_unique_array1.cpp  make_unique_array2.cpp  make_unique_array3.cpp  make_unique_array4.cpp  sample.cpp  tuple.cpp
